<resources>
    <string name="app_name">Panache</string>
    <string name="title_employee">Employee Login</string>
    <string name="title_customer">Customer Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_customer_main">CustomerMainActivity</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="permission_rationale">Permission_rationale</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">Enter Username</string>
    <string name="error_invalid_email">Please Enter Valid Email Address</string>
    <string name="error_incorrect_password">Please Enter Correct Password</string>
    <string name="title_activity_employee_main">EmployeeMainActivity</string>
    <string name="tab1_employee_text">Notification</string>
    <string name="tab2_employee_text">Schedule</string>
    <string name="tab_text_1">Tab1</string>
    <string name="tab_text_2">Tab2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!--    facebook api id-->
    <string name="facebook_app_id">800854360381376</string>
    <string name="fb_login_protocol_scheme">fb800854360381376</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_your_bookings">Your Bookings</string>
    <string name="nav_book_service">Book Service</string>
    <string name="nav_payments">Payments</string>
    <string name="nav_terms">Terms And Conditions</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Your Bookings</item>
        <item>Book Service</item>
        <item>Payments</item>
        <item>Terms And Conditions</item>
        <!--        <item>Settings</item>-->
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer_navigation">CustomerNavigationActivity</string>
    <string name="action_about_us">About Us</string>
    <string name="title_schedule">Schedule</string>
</resources>
