<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_bookings"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_your_bookings" />
        <item
            android:id="@+id/nav_book_service"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_book_service" />
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_payments" />

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_terms" />

<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/ic_menu_share"-->
<!--            android:title="@string/nav_settings" />-->
    </group>

<!--    <item android:title="Other">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_about_us"-->
<!--                android:title="@string/nav_about_us" />-->
<!--            <item-->
<!--                android:id="@+id/nav_privacy_policy"-->
<!--                android:title="@string/privacy_policy" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>